--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,12 +32,15 @@ jobs:
         
       - name: Install dependencies
         run: |
+          cd chap1
           make install
           
       - name: Lint
         run: |
+          cd chap1
           make lint
           
       - name: Test
         run: |
+          cd chap1
           make test
